# parsec-se-driver

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  ci.sh
.github/workflows/: ci.yml
c-tests/: Makefile  main.c  test-app
ci/: Dockerfile  ci.sh  config.toml
ci/c-tests/: Makefile  main.c
include/: parsec_se_driver.h
src/: asymmetric.rs  key_management.rs  lib.rs
