[package]
name = "parsec-se-driver"
version = "0.4.0"
authors = ["Paul Howard <paul.howard@arm.com>",
           "Ionut Mihalcea <ionut.mihalcea@arm.com>",
           "Hugues de Valon <hugues.devalon@arm.com>"]
description = "Parsec Secure Element driver implementation"
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/parsec-se-driver"
readme = "README.md"
keywords = ["parsec"]
categories = ["development-tools"]
edition = "2018"
documentation = "https://parallaxsecond.github.io/"

[lib]
name = "parsec_se_driver"
crate-type = ["cdylib", "staticlib"]

[dependencies]
parsec-client = "0.11.0"
lazy_static = "1.4.0"
psa-crypto = { version = "0.6.0", default-features = false, features = ["interface"] }
log = "0.4.11"
env_logger = { version = "0.7.1", optional = true }

[features]
default = ["logging"]
logging = ["env_logger"]
tpm = []
pkcs11 = []
