[package]
name = "parsec-se-driver"
version = "0.5.0"
authors = ["Contributors to the Parsec project"]
description = "Parsec Secure Element driver implementation"
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/parsec-se-driver"
readme = "README.md"
keywords = ["parsec"]
categories = ["development-tools"]
edition = "2018"
documentation = "https://parallaxsecond.github.io/"

[lib]
name = "parsec_se_driver"
crate-type = ["staticlib"]

[dependencies]
parsec-client = { git = "https://github.com/parallaxsecond/parsec-client-rust", rev = "f2470712b2cbf854a7b2e5036f1c8c7cf889dfa6" }
lazy_static = "1.4.0"
psa-crypto = { git = "https://github.com/parallaxsecond/rust-psa-crypto", rev = "4da203be2d4ec0705fb87234468612011b452861", default-features = false, features = ["interface"] }
log = "0.4.11"
env_logger = { version = "0.7.1", optional = true }

[features]
default = ["logging"]
logging = ["env_logger"]
