[package]
name = "parsec-se-driver"
version = "0.6.0"
authors = ["Contributors to the Parsec project"]
description = "Parsec Secure Element driver implementation"
license = "Apache-2.0"
repository = "https://github.com/parallaxsecond/parsec-se-driver"
readme = "README.md"
keywords = ["parsec"]
categories = ["development-tools"]
edition = "2018"
documentation = "https://parallaxsecond.github.io/"

[lib]
name = "parsec_se_driver"
crate-type = ["staticlib"]

[dependencies]
parsec-client = "0.13.0"
lazy_static = "1.4.0"
psa-crypto = { version = "0.9.0", default-features = false, features = ["interface"] }
psa-crypto-sys = { version = "=0.9.1", default-features = false, features = ["interface"] }
log = "0.4.11"
env_logger = { version = "0.7.1", optional = true }

[features]
default = ["logging"]
logging = ["env_logger"]
